--- a/Portfolio_writing/package.json
+++ b/Portfolio_writing/package.json
@@ -10,12 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.9",
+    "axios": "^1.13.2",
     "framer-motion": "^12.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.1.1",
+    "react-router-dom": "^7.9.6",
+    "styled-component": "^2.8.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
